@@ -2,7 +2,7 @@
 #
 #      adc_synth.cdl
 #
-#      eCos Synthethic ADC configuration data
+#      eCos Synthetic ADC configuration data
 #
 # ====================================================================
 ## ####ECOSGPLCOPYRIGHTBEGIN####                                            
